Demo fixes
The server doesn't return 500 errors anymore when the file is missing, the search operation now takes another parameter, rather than a pathvariable
